# ptar

./: .gitignore  README.md  setup.py
examples/: test2.py
ptar/: CMakeLists.txt  ParallelTarReader.cpp  ParallelTarReader.h  __init__.py  cptar.cpp  ptar.py
test/: test_reads.py
